Removed error messages from medications new/edit partials and placed in manage_medications.

--- a/app/views/patients/manage_medications.html.haml
+++ b/app/views/patients/manage_medications.html.haml
@@ -5,6 +5,9 @@
 
     %h5 Patient Medications
 
+    .large-12.columns
+      = render partial: "shared/errors", locals: { model: @patient }
+
 .wide-screen
   = nested_form_for @patient do |f|
 
