--- a/app/views/shared/_errors.html.haml
+++ b/app/views/shared/_errors.html.haml
@@ -1,3 +1,6 @@
-%ul.error-messages
-  - model.errors.full_messages.each do |msg|
-    %li= msg
+.row
+  %ul.error-messages
+    - model.errors.full_messages.each do |msg|
+      %li
+        = msg
+
