--- a/app/views/peritonitis_episodes/new.html.haml
+++ b/app/views/peritonitis_episodes/new.html.haml
@@ -19,6 +19,6 @@
         .row
           = render :partial => 'peritonitis_episodes/form', :locals => { :pe => pe }
 
-        .large-12.columns
+        .row.button-padding
           = link_to "Cancel", pd_info_patient_path(@patient), class: "button tiny left cancel mt"
           = pe.submit "Save Peritonitis Episode", :class => "button tiny right save mt"
