Conditionally validate user signature and position

--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -6,11 +6,9 @@
     = f.hidden_field :approved, value: true
 
     - if @user.errors.any?
-      #error_explanation
-        .alert.alert-error
-          %ul
-            - @user.errors.full_messages.each do |msg|
-              %li= msg
+      %ul.error-messages
+        - @user.errors.full_messages.each do |msg|
+          %li= msg
 
     - if @user.expired?
       .row
