Updated pd_regime views for current/table/show to include pd regime treatment description.

--- a/app/views/patients/_pd_regimes_table.html.haml
+++ b/app/views/patients/_pd_regimes_table.html.haml
@@ -5,6 +5,8 @@
         Regime Start Date
       %th.col-width-date
         Regime End Date
+      %th.col-width-13
+        Treatment
       %th
         Regime Bags
       %th.column-6-width
@@ -23,6 +25,9 @@
 
         %td{ :data => { :heading => "End Date" }, valign: "top" }
           = default_for_blank(r.end_date, "Pending")
+
+        %td{ :data => { :heading => "Treatment" }, valign: "top" }
+          = r.treatment
 
         %td{ :data => { :heading => "Regime Bags" }, valign: "top" }
           = pd_regime_bags(r.pd_regime_bags)
