Removed module for switching between capd/apd regime, use 'as: :pd_regime' for new/edit pd regime forms.

--- a/app/views/pd_regimes/new.html.haml
+++ b/app/views/pd_regimes/new.html.haml
@@ -7,7 +7,7 @@
   %ul.no-bullet
     = field_set_tag do
 
-      = nested_form_for [@patient, @pd_regime] do |r|
+      = nested_form_for [@patient, @pd_regime], as: :pd_regime do |r|
         .row
           .large-12.columns
             %h4
