Adjusted label of APD Regime form tidal_indicator.

--- a/app/views/pd_regimes/_apd_fields.html.haml
+++ b/app/views/pd_regimes/_apd_fields.html.haml
@@ -7,7 +7,7 @@
     = r.text_field :last_fill_ml
 
     = r.check_box :add_manual_exchange
-    = r.label :add_manual_exchange, "Additional manual exchange"
+    = r.label :add_manual_exchange, 'Additional manual exchange'
 
 .large-12.columns
   .section-underliner
@@ -15,7 +15,7 @@
 
   .large-12.columns
     = r.check_box :tidal_indicator
-    = r.label :tidal_indicator
+    = r.label :tidal_indicator, 'Has tidal?'
 
     = r.label :tidal_percentage
     = r.text_field :tidal_percentage
