Added styles for padding.

--- a/app/assets/stylesheets/renalware/globals.css.scss
+++ b/app/assets/stylesheets/renalware/globals.css.scss
@@ -136,6 +136,14 @@ ul.bullet-number {
   padding-top: 1em;
 }
 
+.padding-bottom-1 {
+  padding-bottom: 1em;
+}
+
+.padding-top-1 {
+  padding-top: 2em;
+}
+
 .alert_text {
   color: red;
 }
