Adjusted labels for APD form fields.

--- a/app/views/pd_regimes/_apd_fields.html.haml
+++ b/app/views/pd_regimes/_apd_fields.html.haml
@@ -22,14 +22,14 @@
 
 .large-12.columns
   .section-underliner
-    Additional Info:
+    Additional APD Info:
 
   .large-12.columns
     = r.label :no_cycles_per_apd, 'Number of cycles per APD session'
     = r.text_field :no_cycles_per_apd
 
   .large-12.columns
-    = r.label :overnight_pd_ml, 'Overnight pd volume on APD'
+    = r.label :overnight_pd_ml, 'Overnight PD volume on APD'
     = r.text_field :overnight_pd_ml
 
 
