--- a/app/views/pd_regimes/bags/_form.html.haml
+++ b/app/views/pd_regimes/bags/_form.html.haml
@@ -1,20 +1,17 @@
 = rb.hidden_field :pd_regime_id
 
-.large-4.columns.inline
-  = rb.label :bag_type_id, 'Bag Type'
-  = rb.select :bag_type_id, BagType.all.map { |bt| [bt.full_description, bt.id] }
+.large-12.columns
+  .large-5.columns.inline
+    = rb.label :bag_type_id, 'Bag Type'
+    = rb.select :bag_type_id, BagType.all.map { |bt| [bt.full_description, bt.id] }
 
-.large-2.columns.inline
-  = rb.label :volume, 'Volume'
-  = rb.text_field :volume
+  .large-2.columns.inline
+    = rb.label :volume, 'Volume (ml)'
+    = rb.text_field :volume
 
-.large-2.columns.inline
-  = rb.label :per_week, 'Per week'
-  = rb.select :per_week, (1..7)
-
-.large-3.columns.inline
-  = rb.submit 'Remove', name: "actions[remove][#{rb.index}]", class: 'button cancel tiny right remove-bag'
-  = rb.link_to_remove 'Remove', class: 'button cancel tiny right remove-bag hide'
+  .large-2.columns.inline
+    = rb.submit 'Remove', name: "actions[remove][#{rb.index}]", class: 'button cancel tiny right remove-bag'
+    = rb.link_to_remove 'Remove', class: 'button cancel tiny right remove-bag hide'
 
 .large-12.columns
   = rb.check_box :monday, class: 'inline'
@@ -31,5 +28,3 @@
   = rb.label :saturday
   = rb.check_box :sunday, class: 'inline'
   = rb.label :sunday
-
-%hr
