Moved placement of 'Add Bag' button in pd_regimes to the right, to keep consistency with other feature forms.

--- a/app/views/pd_regimes/_pd_regime_bags.html.haml
+++ b/app/views/pd_regimes/_pd_regime_bags.html.haml
@@ -7,6 +7,6 @@
       = render partial: 'pd_regimes/bags/form', locals: {rb: rb}
 
 .large-12.columns
-  = r.submit 'Add Bag', name: 'actions[add]', class: 'add-bag button tiny'
-  = r.link_to_add 'Add Bag', :pd_regime_bags, class: 'add-bag button tiny hide'
+  = r.submit 'Add Bag', name: 'actions[add]', class: 'add-bag button tiny right'
+  = r.link_to_add 'Add Bag', :pd_regime_bags, class: 'add-bag button tiny hide right'
 
