Adjusted capd/apd form labels, updated related test.

--- a/app/views/pd_regimes/_apd_fields.html.haml
+++ b/app/views/pd_regimes/_apd_fields.html.haml
@@ -17,7 +17,7 @@
     = r.check_box :tidal_indicator
     = r.label :tidal_indicator, 'Has tidal?'
 
-    = r.label :tidal_percentage
+    = r.label :tidal_percentage, 'Tidal (%)'
     = r.text_field :tidal_percentage
 
 .large-12.columns
@@ -29,7 +29,7 @@
     = r.text_field :no_cycles_per_apd
 
   .large-12.columns
-    = r.label :overnight_pd_ml, 'Overnight PD volume on APD'
+    = r.label :overnight_pd_ml, 'Overnight PD volume on APD (ml)'
     = r.text_field :overnight_pd_ml
 
 
