--- a/app/views/letters/edit.html.haml
+++ b/app/views/letters/edit.html.haml
@@ -3,6 +3,8 @@
 
 .row
   .large-12.columns
-    = form_for [@patient, @letter], url: patient_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
+    = form_for [@patient, @letter], as: :letter,
+      url: patient_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
+
       = render partial: 'form', locals: { f: f }
       = f.submit 'Update', class: 'button save'
