Add clinic letter from clinics index

--- a/app/views/clinics/_clinic.html.haml
+++ b/app/views/clinics/_clinic.html.haml
@@ -6,5 +6,6 @@
   %td
     = clinic.bp
   %td
+    = link_to 'Add Letter', new_clinic_letter_path(clinic), class: 'button tiny'
     = link_to 'Edit', edit_patient_clinic_path(patient_id: clinic.patient.to_param, id: clinic.to_param), class: 'button tiny'
     = link_to 'Delete', patient_clinic_path(patient_id: clinic.patient.to_param, id: clinic.to_param), method: :delete, class: 'button tiny cancel'
