--- a/app/views/letters/_form.html.haml
+++ b/app/views/letters/_form.html.haml
@@ -5,7 +5,7 @@
 = f.hidden_field :clinic_id if @letter.clinic_letter?
 
 .row
-  %h5 #{patient_and_doctor_info(@patient)}
+  %h5 #{letter_info(@letter)}
 
 .row
   .columns.large-10.inline
