--- a/app/views/clinic_visits/edit.html.haml
+++ b/app/views/clinic_visits/edit.html.haml
@@ -3,6 +3,8 @@
 
 .row
   .large-12.columns
-    = form_for [@patient, @clinic], url: patient_clinic_path(patient_id: @patient.to_param, id: @clinic.to_param) do |f|
+    = form_for [@patient, @clinic_visit],
+      url: patient_clinic_visit_path(patient_id: @patient.to_param, id: @clinic_visit.to_param) do |f|
+
       = render partial: 'form', locals: { f: f }
       = f.submit 'Update', class: 'button save'
