--- a/app/views/clinic_visits/new.html.haml
+++ b/app/views/clinic_visits/new.html.haml
@@ -3,6 +3,6 @@
 
 .row
   .large-12.columns
-    = form_for [@patient, @clinic], url: patient_clinics_path(@patient) do |f|
+    = form_for [@patient, @clinic_visit], url: patient_clinic_visits_path(@patient) do |f|
       = render partial: 'form', locals: { f: f }
       = f.submit 'Save', class: 'button save'
