--- a/app/views/letters/_form.html.haml
+++ b/app/views/letters/_form.html.haml
@@ -2,7 +2,7 @@
 
 = hidden_field_tag :type, @letter.type
 = f.hidden_field :patient_id
-= f.hidden_field :clinic_id if @letter.clinic_letter?
+= f.hidden_field :clinic_visit_id if @letter.clinic_letter?
 
 .row
   %h5 #{letter_info(@letter)}
