--- a/app/views/letters/_form.html.haml
+++ b/app/views/letters/_form.html.haml
@@ -37,7 +37,7 @@
     = radio_button_tag 'letter[recipient]', 'other', @patient.doctor.nil? && @patient.current_address.nil?, class: 'inline'
     = f.label :recipient, 'Other'
 
-    = text_field_tag 'other_recipient_address', recipient_address(@letter)
+    = text_area_tag 'other_recipient_address', recipient_address(@letter), rows: 3
 
 - if @letter.clinic_letter?
   .row
