--- a/app/assets/stylesheets/renalware/pd_regime_bags.css.scss
+++ b/app/assets/stylesheets/renalware/pd_regime_bags.css.scss
@@ -1,5 +1,6 @@
-form .row .columns .days-of-week {
+form .row .columns .validate-days-of-week {
   border: 1px red solid;
   padding-top: 0.5rem;
   padding-left: 0.5rem;
 }
+
