--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -6,26 +6,32 @@
 = bt.label :description
 = bt.text_field :description
 
-= bt.label :glucose_ml_percent_1_36, "Volume of 1.36% glucose/litre (ml)"
-= bt.text_field :glucose_ml_percent_1_36
-
-= bt.label :glucose_ml_percent_2_27, "Volume of 2.27% glucose/litre (ml)"
-= bt.text_field :glucose_ml_percent_2_27
-
-= bt.label :glucose_ml_percent_3_86, "Volume of 3.86% glucose/litre (ml)"
-= bt.text_field :glucose_ml_percent_3_86
-
-= bt.label :amino_acid_ml, "Volume of amino acid soln (ml)"
-= bt.text_field :amino_acid_ml
-
-= bt.label :icodextrin_ml, "Volume of icodextrin soln (ml)"
-= bt.text_field :icodextrin_ml
+= bt.label :glucose_grams_per_litre, "Glucose content (g/l)"
+= bt.text_field :glucose_grams_per_litre
 
 %ul.no-bullet
+  %li
+    = bt.check_box :amino_acid
+    = bt.label :amino_acid_ml, "Contains amino acid soln?"
+  %li
+    = bt.check_box :icodextrin
+    = bt.label :icodextrin_ml, "Contains icodextrin soln?"
   %li
     = bt.check_box :low_glucose_degradation
     = bt.label :low_glucose_degradation, "Low glucose degradation product (GDP)"
   %li
     = bt.check_box :low_sodium
     = bt.label :low_sodium, "Low sodium solution"
+
+= bt.label :sodium_content
+= bt.text_field :sodium_content
+
+= bt.label :lactate_content
+= bt.text_field :lactate_content
+
+= bt.label :calcium_content
+= bt.text_field :calcium_content
+
+= bt.label :magnesium_content
+= bt.text_field :magnesium_content
 
