--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -1,55 +1,65 @@
-.row
-  %h4 Manage CAPD Bag Types
+.wide-screen
+  .columns.large-12
+    %h4 Manage PD Bag Types
 
-.row
-  = link_to "Create a new Bag Type", new_bag_type_path, :class => "button tiny"
+  .columns.large-12
+    = link_to "Create A New Bag Type", new_bag_type_path, :class => "button tiny"
 
-.row
-  %table.responsive.bag-types-list
-    %thead
-      %tr
-        %th
-          Manufacturer
-        %th
-          Description
-        %th
-          1.36% glc/l (ml)
-        %th
-          2.27% glc/l (ml)
-        %th
-          3.86% glc/l (ml)
-        %th
-          amino acid (ml)
-        %th
-          icodextrin (ml)
-        %th
-          Low GDP
-        %th
-          Low Na
-        %th
-          Action
-
-    %tbody
-      - @bag_types.each do |bt|
+.wide-screen
+  .columns.large-12
+    %table.responsive.bag-types-list
+      %thead
         %tr
-          %td{ :data => { :heading => "Manufacturer" } }
-            = bt.manufacturer
-          %td{ :data => { :heading => "Bag description" } }
-            = bt.description
-          %td{ :data => { :heading => "1.36% glucose/litre (ml)" } }
-            = bt.glucose_ml_percent_1_36
-          %td{ :data => { :heading => "2.27% glucose/litre (ml)" } }
-            = bt.glucose_ml_percent_2_27
-          %td{ :data => { :heading => "3.86% glucose/litre (ml)" } }
-            = bt.glucose_ml_percent_3_86
-          %td{ :data => { :heading => "Amino acid soln (ml)" } }
-            = bt.amino_acid_ml
-          %td{ :data => { :heading => "Icodextrin soln (ml)" } }
-            = bt.icodextrin_ml
-          %td{ :data => { :heading => "Low GDP" } }
-            = yes_no(bt.low_glucose_degradation)
-          %td{ :data => { :heading => "Low Na" } }
-            = yes_no(bt.low_sodium)
-          %td{ :data => { :heading => "Actions" } }
-            = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
-            = link_to "Delete", bag_type_path(bt.id), method: :delete , class: "delete", id: "delete-bag-type-#{bt.id}", data: { confirm: "Are you sure you want to delete this bag type?" }
+          %th
+            Manufacturer
+          %th
+            Description
+          %th
+            Glucose content (g/l)
+          %th
+            Amino acid
+          %th
+            Icodextrin
+          %th
+            Low GDP
+          %th
+            Low Na
+          %th
+            Sodium content
+          %th
+            Lactate content
+          %th
+            Calcium content
+          %th
+            Magnesium content
+          %th
+            Action
+
+      %tbody
+        - @bag_types.each do |bt|
+          %tr
+            %td{ :data => { :heading => "Manufacturer" } }
+              = bt.manufacturer
+            %td{ :data => { :heading => "Bag description" } }
+              = bt.description
+            %td{ :data => { :heading => "Glucose (g/l)" } }
+              = bt.glucose_grams_per_litre
+            %td{ :data => { :heading => "Amino acid soln" } }
+              = yes_no(bt.amino_acid)
+            %td{ :data => { :heading => "Icodextrin soln" } }
+              = yes_no(bt.icodextrin)
+            %td{ :data => { :heading => "Low GDP" } }
+              = yes_no(bt.low_glucose_degradation)
+            %td{ :data => { :heading => "Low Na" } }
+              = yes_no(bt.low_sodium)
+            %td{ :data => { :heading => "Sodium content" } }
+              = bt.sodium_content
+            %td{ :data => { :heading => "Lactate content" } }
+              = bt.lactate_content
+            %td{ :data => { :heading => "Calcium content" } }
+              = bt.calcium_content
+            %td{ :data => { :heading => "Magnesium content" } }
+              = bt.magnesium_content
+            %td{ :data => { :heading => "Actions" } }
+              = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
+              = link_to "Delete", bag_type_path(bt.id), method: :delete , class: "delete", id: "delete-bag-type-#{bt.id}", data: { confirm: "Are you sure you want to delete this bag type?" }
