Corrected changed form field labels for pd bag type attributes.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -12,10 +12,10 @@
 %ul.no-bullet
   %li
     = bt.check_box :amino_acid
-    = bt.label :amino_acid_ml, "Contains amino acid soln?"
+    = bt.label :amino_acid, "Contains amino acid soln?"
   %li
     = bt.check_box :icodextrin
-    = bt.label :icodextrin_ml, "Contains icodextrin soln?"
+    = bt.label :icodextrin, "Contains icodextrin soln?"
   %li
     = bt.check_box :low_glucose_degradation
     = bt.label :low_glucose_degradation, "Low glucose degradation product (GDP)"
