Adjusted submit buttons for new/edit bag type to keep consistency with other features, updated related cuke tests.

--- a/app/views/bag_types/new.html.haml
+++ b/app/views/bag_types/new.html.haml
@@ -13,6 +13,6 @@
       = render partial: "bag_types/form", locals: { bt: bt }
 
       %ul.no-bullet.button-padding
-        %li= submit_tag "Save", class: "button tiny right save"
+        %li= submit_tag "Save New Bag Type", class: "button tiny right save"
         %li= link_to "Cancel", patients_path, :class => "button tiny cancel"
 
