--- a/app/views/bag_types/edit.html.haml
+++ b/app/views/bag_types/edit.html.haml
@@ -13,5 +13,5 @@
       = render partial: "bag_types/form", locals: { bt: bt }
 
       %ul.no-bullet.button-padding
-        %li= submit_tag "Update Bag Type", class: "button tiny right"
+        %li= submit_tag "Update This Bag Type", class: "button tiny right"
         %li= link_to "Cancel", bag_types_path, class: "button tiny left cancel"
