Added units (mmole/l) for sodium/lactate/calcium/magnesium content within bag types.

--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -25,13 +25,13 @@
           %th
             Low Na
           %th
-            Sodium content
+            Sodium content (mmole/l)
           %th
-            Lactate content
+            Lactate content (mmole/l)
           %th
-            Calcium content
+            Calcium content (mmole/l)
           %th
-            Magnesium content
+            Magnesium content (mmole/l)
           %th
             Action
 
@@ -52,13 +52,13 @@
               = yes_no(bt.low_glucose_degradation)
             %td{ :data => { :heading => "Low Na" } }
               = yes_no(bt.low_sodium)
-            %td{ :data => { :heading => "Sodium content" } }
+            %td{ :data => { :heading => "Sodium (mmole/l)" } }
               = bt.sodium_content
-            %td{ :data => { :heading => "Lactate content" } }
+            %td{ :data => { :heading => "Lactate (mmole/l)" } }
               = bt.lactate_content
-            %td{ :data => { :heading => "Calcium content" } }
+            %td{ :data => { :heading => "Calcium (mmole/l)" } }
               = bt.calcium_content
-            %td{ :data => { :heading => "Magnesium content" } }
+            %td{ :data => { :heading => "Magnesium (mmole/l)" } }
               = bt.magnesium_content
             %td{ :data => { :heading => "Actions" } }
               = link_to "Edit", edit_bag_type_path(bt.id), id: "edit-bag-type-#{bt.id}"
