--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -23,15 +23,15 @@
     = bt.check_box :low_sodium
     = bt.label :low_sodium, "Low sodium solution"
 
-= bt.label :sodium_content
+= bt.label :sodium_content, "Sodium content (mmole/l)"
 = bt.text_field :sodium_content
 
-= bt.label :lactate_content
+= bt.label :lactate_content, "Lactate content (mmole/l)"
 = bt.text_field :lactate_content
 
-= bt.label :calcium_content
+= bt.label :calcium_content, "Calcium content (mmole/l)"
 = bt.text_field :calcium_content
 
-= bt.label :magnesium_content
+= bt.label :magnesium_content, "Magnesium content (mmole/l)"
 = bt.text_field :magnesium_content
 
