Updated bag type new/edit forms and index to use changed bag type attribute names, added bicarbonate column.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -23,15 +23,18 @@
     = bt.check_box :low_sodium
     = bt.label :low_sodium, "Low sodium solution"
 
-= bt.label :sodium_content, "Sodium content (mmole/l)"
-= bt.text_field :sodium_content
+= bt.label :sodium_mmole_l, "Sodium content (mmole/l)"
+= bt.text_field :sodium_mmole_l
 
-= bt.label :lactate_content, "Lactate content (mmole/l)"
-= bt.text_field :lactate_content
+= bt.label :lactate_mmole_l, "Lactate content (mmole/l)"
+= bt.text_field :lactate_mmole_l
 
-= bt.label :calcium_content, "Calcium content (mmole/l)"
-= bt.text_field :calcium_content
+= bt.label :bicarbonate_mmole_l, "Bicarbonate content (mmole/l)"
+= bt.text_field :bicarbonate_mmole_l
 
-= bt.label :magnesium_content, "Magnesium content (mmole/l)"
-= bt.text_field :magnesium_content
+= bt.label :calcium_mmole_l, "Calcium content (mmole/l)"
+= bt.text_field :calcium_mmole_l
+
+= bt.label :magnesium_mmole_l, "Magnesium content (mmole/l)"
+= bt.text_field :magnesium_mmole_l
 
