Created fixed options for tidal percentages, with spec tests.

--- a/app/views/pd_regimes/_apd_fields.html.haml
+++ b/app/views/pd_regimes/_apd_fields.html.haml
@@ -18,7 +18,8 @@
     = r.label :tidal_indicator, 'Has tidal?'
 
     = r.label :tidal_percentage, 'Tidal (%)'
-    = r.text_field :tidal_percentage
+    / = r.text_field :tidal_percentage
+    = r.select :tidal_percentage, tidal_options, { :prompt => "Please select from options" }, :class => "pd-regime-treament-select"
 
 .large-12.columns
   .section-underliner
