--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -1,7 +1,7 @@
 = bt.hidden_field :id unless bt.object.new_record?
 
 = bt.label :manufacturer
-= bt.text_field :manufacturer
+= bt.select :manufacturer, manufacturer_options, { :prompt => "Please select from options" }, class: "manufacturer-select"
 
 = bt.label :description
 = bt.text_field :description
