--- a/app/views/clinic_visits/index.html.haml
+++ b/app/views/clinic_visits/index.html.haml
@@ -1,21 +1,24 @@
-.row
-  %h5 Clinics (Patient: #{@patient.full_name})
+.wide-screen
+  .columns.large-12
+    = render partial: "patients/patient_info_header", locals: { model: @patient }
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+
+    %h5 Clinic Visits
+
+    %table.clinics.responsive
+      %thead
+        %tr
+          %th
+            Date
+          %th
+            BMI
+          %th
+            BP
+          %th.g-center
+            Actions
+
+      %tbody
+        = render @clinic_visits
 
 .row
-  %table.clinics.responsive
-    %thead
-      %tr
-        %th
-          Date
-        %th
-          BMI
-        %th
-          BP
-        %th.g-center
-          Actions
-
-    %tbody
-      = render @clinic_visits
-
-.row
-  = link_to 'New clinic', new_patient_clinic_visit_path(@patient), class: 'button tiny save'
+  = link_to 'Add Clinic Visit', new_patient_clinic_visit_path(@patient), class: 'button tiny save'
