Add 'Clinic Visits' to patient subnav menu

--- a/app/views/patients/_patient_sub_nav.html.haml
+++ b/app/views/patients/_patient_sub_nav.html.haml
@@ -11,3 +11,5 @@
     = link_to "Meds (#{@patient.medications.length})", manage_medications_patient_path(@patient), title: "Manage Medications"
   %dd{role: "menuitem"}
     = link_to "Events (#{@patient.events.length})", patient_events_path(@patient), title: "Patient Events"
+  %dd{role: "menuitem"}
+    = link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient), title: "Clinic Visits"
