--- a/app/views/patients/_patient_sub_nav.html.haml
+++ b/app/views/patients/_patient_sub_nav.html.haml
@@ -4,7 +4,7 @@
   %dd{role: "menuitem"}
     = link_to "Admin", demographics_patient_path(@patient), title: "Demographics"
   %dd{role: "menuitem"}
-    = link_to "Modal", patient_modalities_path(@patient), title: "Patient Modality"
+    = link_to "Modals", patient_modalities_path(@patient), title: "Patient Modality"
   %dd{role: "menuitem"}
     = link_to "Problems (#{@patient.problems.length})", problems_patient_path(@patient), title: "Manage Problems"
   %dd{role: "menuitem"}
