--- a/app/views/letters/index.html.haml
+++ b/app/views/letters/index.html.haml
@@ -1,23 +1,26 @@
-.row
-  %h5 Letters (Patient: #{@patient.full_name})
+.wide-screen
+  .columns.large-12
+    = render partial: "patients/patient_info_header", locals: { model: @patient }
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row
-  %table.letters.responsive
-    %thead
-      %tr
-        %th
-          Author
-        %th
-          Description
-        %th
-          State
-        %th
-          Last updated
-        %th.g-center
-          Actions
+    %h5 Letters
 
-    %tbody
-      = render @letters
+    %table.letters.responsive
+      %thead
+        %tr
+          %th
+            Author
+          %th
+            Description
+          %th
+            State
+          %th
+            Last updated
+          %th.g-center
+            Actions
+
+      %tbody
+        = render @letters
 
 .row
   = link_to 'Draft letter', new_patient_letter_path(@patient), class: 'button tiny save'
