--- a/app/views/patients/_patient_sub_nav.html.haml
+++ b/app/views/patients/_patient_sub_nav.html.haml
@@ -13,3 +13,5 @@
     = link_to "Events (#{@patient.events.length})", patient_events_path(@patient), title: "Patient Events"
   %dd{role: "menuitem"}
     = link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient), title: "Clinic Visits"
+  %dd{role: "menuitem"}
+    = link_to "Letters (#{@patient.letters.length})", patient_letters_path(@patient), title: "Letters"
